--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-ladda": "^6.0.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": ">=5.0.1"
+  },
+  "overrides": {
+    "@svgr/webpack": "^6.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
